# fastapi_core

./: README.md  pyproject.toml
src/fastapi_core/controllers/: dependencies.py  healthcheck.py
src/fastapi_core/database/: dependencies.py  models.py  sessions.py
src/fastapi_core/gateways/: base.py  exceptions.py
src/fastapi_core/logging/: __init__.py  configure.py  handlers.py  sinks.py
src/fastapi_core/mappers/: base.py
src/fastapi_core/middleware/: database.py  exceptions.py  logger.py  profiler.py
src/fastapi_core/repositories/: base.py
src/fastapi_core/schemas/: base.py
src/fastapi_core/services/: base.py
src/fastapi_core/settings/: app.py  clickhouse.py  database.py  httpx.py  profiler.py
