[tool.poetry]
name = "fastapi-core"
version = "0.2.3"
description = "Reusable core components for FastAPI MVC project"
authors = ["Damir Kuzovatov <Damir.Kuzovatov@waveaccess.global>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.103.1"


[tool.poetry.group.database.dependencies]
sqlalchemy = "^2.0.23"


[tool.poetry.group.validator.dependencies]
pydantic = "^2.4.2"


[tool.poetry.group.settings.dependencies]
pydantic-settings = "^2.0.3"


[tool.poetry.group.requests.dependencies]
httpx = "^0.25.1"


[tool.poetry.group.stubs.dependencies]
sqlalchemy2-stubs = "^0.0.2a36"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
