[tool.poetry]
name = "fastapi-core"
version = "0.3.0"
description = "Reusable core components for FastAPI MVC project"
authors = ["Damir Kuzovatov <Damir.Kuzovatov@waveaccess.global>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
sqlalchemy = {version = "^2.0.24", optional = true}
pydantic = {version = "^2.5.3", optional = true}
pydantic-settings = {version = "^2.1.0", optional = true}
httpx = {version = "^0.26.0", optional = true}
alembic = {version = "^1.13.1", optional = true}
psycopg2-binary = {version = "^2.9.9", optional = true}
asyncpg = {version = "^0.29.0", optional = true}


[tool.poetry.extras]
database = ["sqlalchemy", "alembic", "psycopg2-binary", "asyncpg"]
gateway = ["httpx"]
validation = ["pydantic", "pydantic-settings"]
all = [
    "sqlalchemy",
    "alembic",
    "psycopg2-binary",
    "asyncpg",
    "httpx",
    "pydantic",
    "pydantic-settings",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
